# Search-problem-solving-Server

./: .gitignore  AStar.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DepthFirstSearch.h  FIleCacheManager.cpp  FIleCacheManager.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  Matrix.h  MatrixSolver.cpp  MatrixSolver.h  MyMatrixClientHandler.cpp  MyMatrixClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  PriorityQueueSearcher.h  README.md  SearchSolver.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  main.cpp
